samples/_failures_safe/1761292672_27d796_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9c8a492.c: In function ‘main’:
./samples/SAFE/__tmp_f9c8a492.c:158:24: error: missing terminating " character
  158 |                 printf("Enter
      |                        ^~~~~~
./samples/SAFE/__tmp_f9c8a492.c:158:17: error: expected expression at end of input
  158 |                 printf("Enter
      |                 ^~~~~~
./samples/SAFE/__tmp_f9c8a492.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9c8a492.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9c8a492.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9c8a492.c:158:17: error: expected declaration or statement at end of input
